[package]
name = "fluid_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
console_error_panic_hook = "0.1.7"
rand = "0.3.14"
rayon = "1.8.1"
bevy_flycam = "0.9"
smooth-bevy-cameras = "=0.10.0"
bevy-aabb-instancing = "0.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
